# rules_apko

./: MODULE.bazel
.github/workflows/: update-apko.yml
apko/private/: versions.bzl
examples/oci/: BUILD.bazel
scripts/: README.md
