load("@rules_apko//apko:defs.bzl", "apko_image")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":transition.bzl", "multi_arch")

# An example demonstrating how to use apko_image with rules_oci
# See MODULE.bazel for how apko.lock.json is translated to @examples_oci//:contents
apko_image(
    name = "wolfi-base",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    config = "apko.yaml",
    contents = "@examples_oci//:contents",
    tag = "wolfi:latest",
)

pkg_tar(
    name = "layer",
    srcs = ["say_hello.sh"],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

oci_image(
    name = "image",
    base = ":wolfi-base",
    cmd = ["/say_hello.sh"],
    tars = [
        ":layer",
    ],
)

multi_arch(
    name = "images",
    image = ":image",
    platforms = [
        ":linux_arm64",
        ":linux_amd64",
    ],
)

# This currently fails
oci_image_index(
    name = "index",
    images = [
        ":images",
    ],
)

# This currently fails
#oci_load(
#    name = "tarball",
#    image = ":image",
#    repo_tags = ["apko_oci:latest"],
#)
